--- a/CMS/CMS.Web/Views/Candidates/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Edit.cshtml
@@ -12,7 +12,7 @@
 
     </div>
     <div class="form-group" style="margin-top: 15px;">
-        <label asp-for="Phone" class="control-label"><span class="text-danger">*</span> Phone</label>
+        <label asp-for="Phone" class="control-label">Phone</label>
         <input style="width: 30%;" asp-for="Phone" class="form-control" autocomplete="off" />
         <span asp-validation-for="Phone" class="text-danger"></span>
         <span id="phoneError" class="text-danger"></span>
@@ -153,13 +153,13 @@
                 $('#fullNameError').text('');
             }
 
-            // Validate Phone
-            if (!phone.trim()) {
-                $('#phoneError').text('Phone is required.');
-                e.preventDefault(); // Prevent form submission
-            } else {
-                $('#phoneError').text('');
-            }
+            // // Validate Phone
+            // if (!phone.trim()) {
+            //     $('#phoneError').text('Phone is required.');
+            //     e.preventDefault(); // Prevent form submission
+            // } else {
+            //     $('#phoneError').text('');
+            // }
 
             // Validate CV Provider name (CompanyId)
             if (!companyId) {
