--- a/CMS/CMS.Web/Views/Shared/_Layout.cshtml
+++ b/CMS/CMS.Web/Views/Shared/_Layout.cshtml
@@ -144,13 +144,13 @@
                     <div class="d-flex align-items-center">
                         <div class="ms-1 header-item d-none d-sm-flex">
                             <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle" data-toggle="fullscreen">
-                                <i class='bx bx-fullscreen fs-22'></i>
+                                <i class='bx bx-fullscreen fs-22' data-bs-toggle="tooltip" data-bs-placement="left" data-bs-original-title="Full Screen"></i>
                             </button>
                         </div>
 
                         <div class="ms-1 header-item d-none d-sm-flex">
                             <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle light-dark-mode">
-                                <i class='bx bx-moon fs-22'></i>
+                                <i class='bx bx-moon fs-22' data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Dark Mode"></i>
                             </button>
                         </div>
 
@@ -170,8 +170,8 @@
                                 });
                             </script>
                             <div class="dropdown topbar-head-dropdown ms-1 header-item" id="notificationDropdownGM">
-                                <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle" id="page-header-notifications-dropdownGM" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-haspopup="true" aria-expanded="false">
-                                    <i class='bx bx-bell fs-22'></i>
+                                <button  type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle" id="page-header-notifications-dropdownGM" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-haspopup="true" aria-expanded="false">
+                                    <i class='bx bx-bell fs-22' data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Notifications"></i>
                                     <span class="position-absolute topbar-badge fs-10 translate-middle badge rounded-pill bg-danger" id="notification-badgeGM"><span class="visually-hidden">unread messages</span></span>
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end p-0" aria-labelledby="page-header-notifications-dropdownGM">
@@ -217,7 +217,7 @@
                             </script>
                             <div class="dropdown topbar-head-dropdown ms-1 header-item" id="notificationDropdownHR">
                                 <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle" id="page-header-notifications-dropdownHR" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-haspopup="true" aria-expanded="false">
-                                    <i class='bx bx-bell fs-22'></i>
+                                    <i class='bx bx-bell fs-22' data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Notifications"></i>
                                     <span class="position-absolute topbar-badge fs-10 translate-middle badge rounded-pill bg-danger" id="notification-badgeHR"><span class="visually-hidden">unread messages</span></span>
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end p-0" aria-labelledby="page-header-notifications-dropdownHR">
@@ -263,7 +263,7 @@
                             </script>
                             <div class="dropdown topbar-head-dropdown ms-1 header-item" id="notificationDropdownInterviewer">
                                 <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle" id="page-header-notifications-dropdownInterviewer" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-haspopup="true" aria-expanded="false">
-                                    <i class='bx bx-bell fs-22'></i>
+                                    <i class='bx bx-bell fs-22' data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Notifications"></i>
                                     <span class="position-absolute topbar-badge fs-10 translate-middle badge rounded-pill bg-danger" id="notification-badgeInterviewer"><span class="visually-hidden">unread messages</span></span>
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end p-0" aria-labelledby="page-header-notifications-dropdownInterviewer">
@@ -309,7 +309,7 @@
                             </script>
                             <div class="dropdown topbar-head-dropdown ms-1 header-item" id="notificationDropdownArchitecture">
                                 <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle" id="page-header-notifications-dropdownArchitecture" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-haspopup="true" aria-expanded="false">
-                                    <i class='bx bx-bell fs-22'></i>
+                                    <i class='bx bx-bell fs-22' data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Notifications"></i>
                                     <span class="position-absolute topbar-badge fs-10 translate-middle badge rounded-pill bg-danger" id="notification-badgeArchitecture"><span class="visually-hidden">unread messages</span></span>
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end p-0" aria-labelledby="page-header-notifications-dropdownArchitecture">
@@ -449,12 +449,12 @@
                     </span>
                 </a>
                 <!-- Light Logo-->
-                <a href="/" class="logo logo-light">
+                <a href="/" class="logo logo-light" style="margin-left:-15px;">
                    @*  <span class="logo-sm">
                         <img src="~/theme/images/logo-sm.png" alt="" height="22">
                     </span> *@
                     <span class="logo-lg">
-                        <img style="width: 200px;height: 38px;" src="~/theme/images/logo-light.png" alt="" height="17">
+                        <img style="width: 200px;height: 45px;" src="~/theme/images/TechProcessSolutions-logo (1).svg" alt="" height="17">
                     </span>
                 </a> 
                 <button type="button" class="btn btn-sm p-0 fs-20 header-item float-end btn-vertical-sm-hover" id="vertical-hover">
