--- a/CMS/CMS.Web/Views/Interviews/Create.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Create.cshtml
@@ -27,7 +27,7 @@
         @if (ViewBag.positionList != null)
         {
             <select style="width: 30%;" asp-for="PositionId" asp-items="@(ViewBag.positionList)" class="form-control">
-                <option value="">-- Select a Position --</option>
+                <option value="">-- Select a Level --</option>
 
             </select>
         }
@@ -40,7 +40,7 @@
         @if (ViewBag.Tracks != null)
         {
             <select style="width: 30%;" asp-for="TrackId" asp-items="@(ViewBag.Tracks)" class="form-control">
-                <option value="">-- Select a track --</option>
+                <option value="">-- Select a Track --</option>
             </select>
         }
 
@@ -146,23 +146,25 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/js/standalone/selectize.min.js"></script>
 
+<!-- SweetAlert2 CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
+
+<!-- SweetAlert2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
 
 
 <script>
     $(document).ready(function () {
         $('#candidate-dropdown').selectize();
-    });
-</script>
 
-
-<script>
-    $(document).ready(function () {
         $('#createForm').submit(function (e) {
+            e.preventDefault(); // Prevent the default form submission
+                
             var candidateId = $('#CandidateId').val();
             var positionId = $('#PositionId').val();
             var interviewerId = $('#InterviewerId').val();
             var date = $('#Date').val();
-
             // // Validate Candidate
             // if (!candidateId || candidateId <= 0) {
             //     $('#candidateIdError').text('Candidate is required.');
@@ -170,8 +172,7 @@
             // } else {
             //     $('#candidateIdError').text('');
             // }
-
-
+          
 
             // Validate Position
             if (!positionId) {
@@ -206,6 +207,37 @@
             } else {
                 $('#dateValidationMessage').text('');
             }
+
+            // Convert the date to a JavaScript Date object
+            var jsDate = new Date(date);
+
+            // Format the date as "dd/mm/yyyy"
+            var formattedDate =
+                ('0' + jsDate.getDate()).slice(-2) + '/' +
+                ('0' + (jsDate.getMonth() + 1)).slice(-2) + '/' +
+                jsDate.getFullYear() + ' ' +
+                ('0' + ((jsDate.getHours() % 12) || 12)).slice(-2) + ':' +
+                ('0' + jsDate.getMinutes()).slice(-2) + ' ' +
+                (jsDate.getHours() >= 12 ? 'PM' : 'AM');
+
+
+            var message = 'You are about to schedule an interview on ' + formattedDate + '. Are you sure you want to proceed?';
+
+            Swal.fire({
+                title: 'Are you sure?',
+                text: message,
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, submit it!',
+                cancelButtonText: 'No, cancel!',
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // If the user clicks "Yes", proceed with form submission
+                    $('#createForm')[0].submit();
+                }
+            });
         });
     });
 </script>
