--- a/CMS/CMS.Web/Views/Position/GetPositions.cshtml
+++ b/CMS/CMS.Web/Views/Position/GetPositions.cshtml
@@ -21,7 +21,7 @@
                 <table class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
                     <thead>
                         <tr>
-                            
+                            <th>#</th>
                             <th>Position Name</th>
                             <th>Evalution Form</th>
                           
@@ -29,10 +29,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var pos in Model)
+                        @for (var i = 0; i < Model.Count(); i++)
                         {
+                            var pos = Model.ElementAt(i);
                             <tr>
-                               
+                                <td>@(i + 1)</td>
                                 <td>@pos.Name</td>
 
                                 @if (pos.EvaluationId != null)
