--- a/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
@@ -14,7 +14,7 @@
     }
 </style>
 
-@using (Html.BeginForm("Index", "SearchInterviews", FormMethod.Get))
+@using (Html.BeginForm("Index", "SearchInterviews", FormMethod.Get, new { onsubmit = "return validateDates();" }))
 {
     <div class="col-md-3" style="margin-top: -11px;margin-bottom: 21px;margin-left: -8px;">
         <label>&nbsp;</label>
@@ -26,20 +26,21 @@
            asp-route-interviewerFilter="@ViewBag.interviewerFilter"
            asp-route-fromDate="@ViewBag.fromDate"
            asp-route-toDate="@ViewBag.toDate"
-           asp-rout-trackFilter="@ViewBag.TrackList"
+           asp-route-trackFilter="@ViewBag.TrackList"
            class="btn btn-success btn-block">Export to Excel</a>
     </div>
 
     <div class="form-group">
         <div class="row">
             <div class="col-md-3">
-                @Html.Label("Filter by Position:")
-                @Html.DropDownList("positionFilter", ViewBag.PositionList as SelectList, "All Positions", new { @class = "form-control" })
+                @Html.Label("Filter by Levels:")
+                @Html.DropDownList("positionFilter", ViewBag.PositionList as SelectList, "All Levels", new { @class = "form-control" })
             </div>
-            <div class="col-md-3" >
+            <div class="col-md-3">
                 @Html.Label("Filter by Track:")
-                @Html.DropDownList("trackFilter", ViewBag.TrackList as SelectList, "All Tracks", new { @class = "form-control" })
+                @Html.DropDownList("trackFilterDropdown", ViewBag.TrackListDropdown as SelectList, "All Tracks", new { @class = "form-control" })
             </div>
+
             <div class="col-md-3">
                 @Html.Label("Filter by Status:")
                 @Html.DropDownList("statusFilter", ViewBag.StatusList as SelectList, "All Statuses", new { @class = "form-control" })
@@ -71,7 +72,7 @@
                 <button type="submit" class="btn btn-primary btn-block">Filter</button>
             </div>
 
-
+            <span id="dateValidationMessage" style="color: red;margin-top:22px;"></span>
       
 
 
@@ -87,6 +88,7 @@
     <table id="add-rows3" class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
         <thead>
             <tr>
+                <th>#</th>
                 <th>Candidate Name</th>
                 <th>Position</th>
                 <th>Track</th>
@@ -104,9 +106,11 @@
         </thead>
         <tbody>
             @if (Model != null)
-                @foreach (var item in Model)
+                @for (var i = 0; i < Model.Count(); i++)
                 {
+                    var item = Model.ElementAt(i);
                     <tr>
+                        <td>@(i + 1)</td>
                         <td>@Html.DisplayFor(modelItem => item.FullName)</td>
                         <td>@Html.DisplayFor(modelItem => item.Name)</td>
                         <td>@Html.DisplayFor(modelItem => item.TrackName)</td>
@@ -154,13 +158,16 @@
                         <td><a class="bx bx-history" style="font-size:x-large" asp-action="ShowHistory" asp-route-id="@item.InterviewsId" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="View Candidate History"></a></td>
 
                         <td>
-                            @if (item.InterviewerRole == "Interviewer" && item.StatusName == StatusCode.GetName("PND"))
+                           @*  @if (item.InterviewerRole == "Interviewer" && item.StatusName == StatusCode.GetName("PND"))
                             {
                                 <a class="bx bxs-edit-alt" style="font-size:x-large" asp-controller="Interviews" asp-action="Edit" asp-route-id="@item.InterviewsId" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-original-title="Edit"> </a>
-                            }
+                            } *@
 
                             <a class="bx bx-detail" style="font-size:x-large" asp-action="Details" asp-route-id="@item.InterviewsId" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Details"></a> |
-                            <a class="ri-delete-bin-2-line text-danger" style="font-size:x-large" asp-action="Delete" asp-route-id="@item.InterviewsId" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Delete"></a>
+                            @if (item.ParentId == null)
+                            {
+                                <a class="ri-delete-bin-2-line text-danger" style="font-size:x-large" asp-action="Delete" asp-route-id="@item.InterviewsId" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Delete"></a>
+                            }
                         </td>
 
                     </tr>
@@ -172,9 +179,24 @@
 </div>
 
 <script>
+    function validateDates() {
+        var fromDate = new Date(document.getElementById("fromDate").value);
+        var toDate = new Date(document.getElementById("toDate").value);
+        var validationMessageElement = document.getElementById("dateValidationMessage");
+
+        if (fromDate > toDate) {
+            validationMessageElement.textContent = "* 'From Date' should be less than or equal to 'To Date'.";
+            return false; // Prevent form submission
+        }
+
+        validationMessageElement.textContent = ""; // Clear validation message
+        return true; // Allow form submission
+    }
+
     $(document).ready(function () {
         $('#add-rows3').DataTable({
             searching: false
         });
     });
 </script>
+
